# arduino-led-control

./: .gitignore  LICENSE  MANIFEST.in  README.md  monvi.py  pyproject.toml  setup.py  test.py
.github/: copilot-instructions.md
arduino_led_control/: __init__.py  cli.py  controller.py  firmware.py
arduino_led_control/firmware/: led_control.ino
docs/: ARCHITECTURE.md  INSTALLATION.md
scripts/: upload_firmware.py
tests/: __init__.py  test_controller.py
